Added portability, auto-adding and auto-generating of parents in the deployment configuration.
Changed the definition of categories in CategoryName such that the
parent can only be mandatory.

Used a different test case, with no nodes defined.

Fixed an error in NodeLoader.